Unify text length, padding, gap. Fix grammar issues. Improve flow of sentences.

--- a/stylesProjects.css
+++ b/stylesProjects.css
@@ -105,7 +105,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 80px;
+    gap: 100px;
 }
 
 .leftDiscordMusicBot {
@@ -145,7 +145,7 @@ body {
     width: 200px;
     height: 300px;
     padding: 10px;
-    border-radius: 10%;
+    border-radius: 5%;
     object-fit: cover;
     cursor: zoom-in;
 }
@@ -164,7 +164,9 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 80px;
+    gap: 100px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .leftInfoApp {
@@ -204,7 +206,7 @@ body {
     width: 600px;
     height: 300px;
     padding: 10px;
-    border-radius: 10%;
+    border-radius: 5%;
     object-fit: cover;
     cursor: zoom-in;
 }
